service-mesh/deploy/ingress/ingress-gateway.yaml
# ingress gateway is use for like gateway in one domain
# for example below is use for saving domain that accept the port 80 and protocol http
# to receive call from the client
# the name must start with http and the protocol also one of listed in list below
# HTTP
# HTTP2
# TCP
# MONGO

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: saving-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 2379
      name: mongo
      protocol: MONGO
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: saving-account
spec:
  hosts:
  - "*"
  gateways:
  - saving-ingress-gateway
  http:
  - match:
    - uri:
        exact: /sav_account/.*
    route:
    - destination:
        host: account
        port:
          number: 30002
  tcp:
  - route:
    - destination:
        host: mongo
        port:
          number: 31111
